# dt_app

./: README.md
coap_nordic/: Kconfig
coap_nordic/src/coap_module/: coap_module.c  coap_module.h
coap_telenor/: Kconfig  prj.conf
coap_telenor/src/: coap.c  lte_helpers.c  main.c
deprecated/: lte_helpers.h
deprecated/coap_nordic/: CMakeLists.txt  prj.conf
deprecated/coap_nordic/src/: main.c
deprecated/coap_nordic/src/coap_module/: CMakeLists.txt
mqtt/: CMakeLists.txt  Kconfig  prj.conf
mqtt/src/: main.c  sensor_emulator.c
mqtt/src/mqtt_module/: CMakeLists.txt  mqtt_module.c  mqtt_module.h
